--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1>This is Design Version V7</h1>
-    <p>Welcome To GIT HUB
-    </p>
+    <p>Welcome To GIT HUB</p>
     <p>I'm the Best coder</p>
 </body>
 </html>
